# zeami4

./: .env.example  .gitignore  Cargo.toml  ISSUE_15_FILE_WATCHER_REPORT.md  ISSUE_15_GITHUB_API_INVESTIGATION.md  ISSUE_15_INTEGRATION_GUIDE.md  ISSUE_15_TERMINAL_OUTPUT_PARSING_RESEARCH.md  ISSUE_1_DESIGN.md  ISSUE_1_TAURI_DESIGN.md  ISSUE_2_MACOS_BUILD.md  ISSUE_3_TERMINAL_DESIGN.md  ISSUE_4_SETUP.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/agents/: issue-test-agent.md  test-implementer.md  test-infrastructure.md  wiki-migration-agent.md  wiki-update-agent.md  workflow-implementer.md
.claude/commands/: check-guidelines.md
.claude/config/: branch-strategy.md  subagent-best-practices.md
.github/: DOD_TEMPLATES.md  TEST_LEVEL_MATRIX.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr-proposal.md  bug-report.md  feature-request.md  improvement.md  learning-feedback.md  phase-learning.md  phase-learning.yml  (+1 more)
docs/: COMPONENT-INTEGRATION-GUIDE.md  DASHBOARD-ARCHITECTURE-VISUAL.md  ISSUE-15-DELIVERABLES.md  ISSUE-15-UI-FRAMEWORK-INVESTIGATION.md  README.md  STATE-MANAGEMENT-ARCHITECTURE.md
scripts/: create-branch.js  debug-app.js  pre-completion-check.js  update-repo-references.sh  work-unit-start.js
src/: App.dashboard.tsx  App.tsx  main.tsx
src-old/: error.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: file_watcher_demo.rs
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: greet.rs  mod.rs  pty_commands.rs
src-tauri/src/pty/: session.rs
src-tauri/src/watcher/: README.md  commands.rs  config.rs  events.rs  filter.rs  mod.rs  service.rs  tests.rs
(+76 files in other folders)
