[package]
name = "zeami"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "GitHub issue-driven development tool for Claude Code"
license = "MIT"

[[bin]]
name = "zeami"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI
crossterm = "0.27"
ratatui = "0.26"
inquire = "0.7"

# GitHub API
octocrab = "0.38"

# Git operations
git2 = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
dirs = "5.0"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
