[package]
name = "zeami4"
version = "1.0.0"
description = "Auto-development system powered by Claude Code"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/hiranotomo/zeami4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PTY (Terminal emulation)
portable-pty = "0.8"

# GitHub API
octocrab = "0.38"

# Git operations
git2 = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
dirs = "5.0"
chrono = "0.4"
toml = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
